@@ -13,7 +13,7 @@ An R Companion to Applied Regression, Second Edition, Sage, 2011.
 \tabular{ll}{
 Package: \tab car\cr
 Version: \tab 2.0-25\cr
-Date: \tab 2015/02/17\cr
+Date: \tab 2015/02/18\cr
 Depends: \tab R (>= 2.14.0), stats, graphics\cr
 Imports: \tab MASS, mgcv, nnet, pbkrtest (>= 0.3-2), quantreg\cr
 Suggests: \tab  alr4, boot, leaps, lme4, lmtest, Matrix, MatrixModels, mgcv, nlme, rgl (>= 0.93.960), sandwich, SparseM, survival, survey\cr
